-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.11.0 FF
-
None
-
-
2
-
46feeeca7 (dev), d400e35ed (6.10), f18fb47ea (6.9), a04039961 (tqtc/lts-6.8), a95c6e745 (6.10.0)
-
Foundation Sprint 138
In file included from C:/Users/qt/work/install/include/QtCore/qabstractitemmodel.h:13, from C:/Users/qt/work/install/include/QtCore/QtCore:24, from C:/Users/qt/work/qt/qtsvg_build/src/svg/CMakeFiles/Svg.dir/cmake_pch.hxx:5, from <command-line>: In function 'T qvariant_cast(QVariant&&) [with T = QTransform]', inlined from 'T QVariant::value() && [with T = QTransform]' at C:/Users/qt/work/install/include/QtCore/qvariant.h:530:30, inlined from 'void QSvgAnimatedStyle::applyPropertyAnimation(QPainter*, QSvgAbstractAnimatedProperty*, bool, QSvgExtraStates&)' at C:/Users/qt/work/qt/qtsvg/src/svg/qsvgstyle.cpp:754:87: C:/Users/qt/work/install/include/QtCore/qvariant.h:794:67: error: array subscript 'QTransform[0]' is partly outside array bounds of 'QVariant [1]' [-Werror=array-bounds=] 794 | return std::move(*reinterpret_cast<T *>(v.d.data.data)); | ^ C:/Users/qt/work/qt/qtsvg/src/svg/qsvgstyle.cpp: In member function 'void QSvgAnimatedStyle::applyPropertyAnimation(QPainter*, QSvgAbstractAnimatedProperty*, bool, QSvgExtraStates&)': C:/Users/qt/work/qt/qtsvg/src/svg/qsvgstyle.cpp:754:67: note: object '<anonymous>' of size 32 754 | QTransform animatedTransform = property->interpolatedValue().value<QTransform>(); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~ cc1plus.exe: all warnings being treated as errors
Details: https://testresults.qt.io/coin/integration/qt/qtsvg/tasks/1757435165
Tested changes (refs/builds/qtci/dev/1757414648):
https://codereview.qt-project.org/c/qt/qtsvg/+/674385/2 Update dependencies on 'dev' in qt/qtsvg